[package]
authors = ["Erik Johnston"]
edition = "2018"
name = "casniam"
version = "0.1.0"

[dependencies]
base64 = "0.11.0"
chrono = "0.4.6"
failure = "0.1.5"
petgraph = "0.5.0"
rand = "0.7.0"
sha2 = "0.8.0"
smallvec = "1.0.0"
sodiumoxide = "0.2.1"
anymap = "0.12.1"
openssl = "0.10.24"
env_logger = "0.7.0"
log = "0.4.6"
#serde_urlencoded = "0.6.1"
tokio-timer = "0.2.0"
trust-dns-resolver = "0.12.0"
http = "0.2.0"
tokio-tls = "0.3.0"
hyper = "0.13.0"
hyper-tls = "0.4.0"
native-tls = "0.2.3"
futures-util = "0.3.0"
bytes = "0.5.0"
percent-encoding = "2.1.0"
serde_derive = "1.0.102"
actix-web = "2.0.0"
actix-rt = "1.0.0"

[dependencies.tokio]
version = "0.2.4"
features = ["net", "rt-threaded", "macros", "rt-util"]


[dependencies.indolentjson]
git = "https://github.com/NegativeMjark/indolentjson-rust.git"

[dependencies.serde_json]
features = ["raw_value"]
version = "1.0.27"

[dependencies.serde]
version = "1.0"
features = ["derive"]


[dependencies.futures]
package = "futures"
version = "0.3.0"
features = ["compat"]


#[replace."cookie:0.11.0"]
#git = "https://github.com/alexcrichton/cookie-rs.git"
